--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </div>
 
-<section id="gamebox" class="container-gamebox">
+<div id="gamebox" class="container-gamebox">
 
   <div class="left-half locations">
     <div>
@@ -32,10 +32,9 @@
       <h1>Player 2</h1>
       <p>72</p>
       <button type="button" name="button" class="btn">Current</button>
-
     </div>
   </div>
-</section>
+</div>
 
 <div class="">
   <p><i class="ion-ios-loop"></i>Roll dice</p>
@@ -43,6 +42,7 @@
 <div class="">
   <p><i class="ion-ios-download-outline"></i>Roll dice</p>
 </div>
+
 
 
 
