--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <div>
       <h1>Player 1</h1>
       <p>72</p>
+      <input type="checkbox" id="myCheck" onmouseover="dice()" onclick="alert('dice')">
+
       <button type="button" name="button" class="btn">Current</button>
+
     </div>
   </div>
   <div class="right-half gamebox">
