script.js roll dice function

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
       </div>
       <div class="current-score-box">
         <h3>Current</h3>
-        <p class="currentScore">0</p>
+        <p class="currentScore" id="currentScore">0</p>
       </div>
     </div>
     <!-- MIDDLE PART -->
     <div id="middle-part">
       <button id="new-game-btn"><i class="ion-ios-plus-outline"></i>New Game</button>
-      <img src="images/dice-1.png" alt="image Dés">
-      <button id="roll-dice-btn"><i class="ion-ios-loop btn"></i>Roll dice</button>
+      <button id="dice"><img  src="images/dice-1.png" alt="image Dés"></button>
+      <button id="roll-dice-btn" onclick="rollDice()"><i class="ion-ios-loop btn"></i>Roll dice</button>
       <button id="hold-btn"><i class="ion-ios-download-outline btn"></i>Hold</button>
     </div>
 
